--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
             <div class="text-center">
                 <!-- Placeholder for hero image/illustration -->
                 <div class="bg-primary bg-opacity-10 rounded-3 p-5 mb-4">
-                    <i data-feather="cpu" style="width: 200px; height: 200px; stroke-width: 1;"></i>
+                    <i data-feather="brain" style="width: 200px; height: 200px; stroke-width: 1;"></i>
                 </div>
             </div>
         </div>
